coolc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_list
Rule 2     class_list -> class_list class SEMICOLON
Rule 3     class_list -> class SEMICOLON
Rule 4     class -> CLASS TYPE LBRACE features_list_opt RBRACE
Rule 5     class -> CLASS TYPE INHERITS TYPE LBRACE features_list_opt RBRACE
Rule 6     features_list_opt -> features_list
Rule 7     features_list_opt -> empty
Rule 8     features_list -> features_list feature SEMICOLON
Rule 9     features_list -> feature SEMICOLON
Rule 10    feature -> ID LPAREN formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
Rule 11    feature -> ID LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
Rule 12    feature -> ID COLON TYPE ASSIGN expression
Rule 13    feature -> ID COLON TYPE
Rule 14    formal_params_list -> formal_params_list COMMA formal_param
Rule 15    formal_params_list -> formal_param
Rule 16    formal_param -> ID COLON TYPE
Rule 17    expression -> ID
Rule 18    expression -> INTEGER
Rule 19    expression -> BOOLEAN
Rule 20    expression -> STRING
Rule 21    expression -> SELF
Rule 22    expression -> LBRACE block_list RBRACE
Rule 23    block_list -> block_list expression SEMICOLON
Rule 24    block_list -> expression SEMICOLON
Rule 25    expression -> ID ASSIGN expression
Rule 26    expression -> expression DOT ID LPAREN arguments_list_opt RPAREN
Rule 27    arguments_list_opt -> arguments_list
Rule 28    arguments_list_opt -> empty
Rule 29    arguments_list -> arguments_list COMMA expression
Rule 30    arguments_list -> expression
Rule 31    expression -> expression AT TYPE DOT ID LPAREN arguments_list_opt RPAREN
Rule 32    expression -> ID LPAREN arguments_list_opt RPAREN
Rule 33    expression -> expression PLUS expression
Rule 34    expression -> expression MINUS expression
Rule 35    expression -> expression MULTIPLY expression
Rule 36    expression -> expression DIVIDE expression
Rule 37    expression -> expression LT expression
Rule 38    expression -> expression LTEQ expression
Rule 39    expression -> expression EQ expression
Rule 40    expression -> LPAREN expression RPAREN
Rule 41    expression -> IF expression THEN expression ELSE expression FI
Rule 42    expression -> WHILE expression LOOP expression POOL
Rule 43    expression -> let_expression
Rule 44    let_expression -> LET declaration_list IN expression
Rule 45    declaration_list -> declaration_list COMMA declaration
Rule 46    declaration_list -> declaration
Rule 47    declaration -> ID COLON TYPE ASSIGN expression
Rule 48    declaration -> ID COLON TYPE
Rule 49    expression -> CASE expression OF actions_list ESAC
Rule 50    actions_list -> actions_list action
Rule 51    actions_list -> action
Rule 52    action -> ID COLON TYPE ARROW expression SEMICOLON
Rule 53    expression -> NEW TYPE
Rule 54    expression -> ISVOID expression
Rule 55    expression -> INT_COMP expression
Rule 56    expression -> NOT expression
Rule 57    empty -> <empty>

Terminals, with rules where they appear

ARROW                : 52
ASSIGN               : 12 25 47
AT                   : 31
BOOLEAN              : 19
CASE                 : 49
CLASS                : 4 5
COLON                : 10 11 12 13 16 47 48 52
COMMA                : 14 29 45
DIVIDE               : 36
DOT                  : 26 31
ELSE                 : 41
EQ                   : 39
ESAC                 : 49
FI                   : 41
ID                   : 10 11 12 13 16 17 25 26 31 32 47 48 52
IF                   : 41
IN                   : 44
INHERITS             : 5
INTEGER              : 18
INT_COMP             : 55
ISVOID               : 54
LBRACE               : 4 5 10 11 22
LET                  : 44
LOOP                 : 42
LPAREN               : 10 11 26 31 32 40
LT                   : 37
LTEQ                 : 38
MINUS                : 34
MULTIPLY             : 35
NEW                  : 53
NOT                  : 56
OF                   : 49
PLUS                 : 33
POOL                 : 42
RBRACE               : 4 5 10 11 22
RPAREN               : 10 11 26 31 32 40
SELF                 : 21
SEMICOLON            : 2 3 8 9 23 24 52
STRING               : 20
THEN                 : 41
TYPE                 : 4 5 5 10 11 12 13 16 31 47 48 52 53
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

action               : 50 51
actions_list         : 49 50
arguments_list       : 27 29
arguments_list_opt   : 26 31 32
block_list           : 22 23
class                : 2 3
class_list           : 1 2
declaration          : 45 46
declaration_list     : 44 45
empty                : 7 28
expression           : 10 11 12 23 24 25 26 29 30 31 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 41 41 42 42 44 47 49 52 54 55 56
feature              : 8 9
features_list        : 6 8
features_list_opt    : 4 5
formal_param         : 14 15
formal_params_list   : 10 14
let_expression       : 43
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_list
    (2) class_list -> . class_list class SEMICOLON
    (3) class_list -> . class SEMICOLON
    (4) class -> . CLASS TYPE LBRACE features_list_opt RBRACE
    (5) class -> . CLASS TYPE INHERITS TYPE LBRACE features_list_opt RBRACE

    CLASS           shift and go to state 4

    program                        shift and go to state 1
    class_list                     shift and go to state 2
    class                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_list .
    (2) class_list -> class_list . class SEMICOLON
    (4) class -> . CLASS TYPE LBRACE features_list_opt RBRACE
    (5) class -> . CLASS TYPE INHERITS TYPE LBRACE features_list_opt RBRACE

    $end            reduce using rule 1 (program -> class_list .)
    CLASS           shift and go to state 4

    class                          shift and go to state 5

state 3

    (3) class_list -> class . SEMICOLON

    SEMICOLON       shift and go to state 6


state 4

    (4) class -> CLASS . TYPE LBRACE features_list_opt RBRACE
    (5) class -> CLASS . TYPE INHERITS TYPE LBRACE features_list_opt RBRACE

    TYPE            shift and go to state 7


state 5

    (2) class_list -> class_list class . SEMICOLON

    SEMICOLON       shift and go to state 8


state 6

    (3) class_list -> class SEMICOLON .

    CLASS           reduce using rule 3 (class_list -> class SEMICOLON .)
    $end            reduce using rule 3 (class_list -> class SEMICOLON .)


state 7

    (4) class -> CLASS TYPE . LBRACE features_list_opt RBRACE
    (5) class -> CLASS TYPE . INHERITS TYPE LBRACE features_list_opt RBRACE

    LBRACE          shift and go to state 9
    INHERITS        shift and go to state 10


state 8

    (2) class_list -> class_list class SEMICOLON .

    CLASS           reduce using rule 2 (class_list -> class_list class SEMICOLON .)
    $end            reduce using rule 2 (class_list -> class_list class SEMICOLON .)


state 9

    (4) class -> CLASS TYPE LBRACE . features_list_opt RBRACE
    (6) features_list_opt -> . features_list
    (7) features_list_opt -> . empty
    (8) features_list -> . features_list feature SEMICOLON
    (9) features_list -> . feature SEMICOLON
    (57) empty -> .
    (10) feature -> . ID LPAREN formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> . ID LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
    (12) feature -> . ID COLON TYPE ASSIGN expression
    (13) feature -> . ID COLON TYPE

    RBRACE          reduce using rule 57 (empty -> .)
    ID              shift and go to state 15

    features_list_opt              shift and go to state 11
    features_list                  shift and go to state 12
    empty                          shift and go to state 13
    feature                        shift and go to state 14

state 10

    (5) class -> CLASS TYPE INHERITS . TYPE LBRACE features_list_opt RBRACE

    TYPE            shift and go to state 16


state 11

    (4) class -> CLASS TYPE LBRACE features_list_opt . RBRACE

    RBRACE          shift and go to state 17


state 12

    (6) features_list_opt -> features_list .
    (8) features_list -> features_list . feature SEMICOLON
    (10) feature -> . ID LPAREN formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> . ID LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
    (12) feature -> . ID COLON TYPE ASSIGN expression
    (13) feature -> . ID COLON TYPE

    RBRACE          reduce using rule 6 (features_list_opt -> features_list .)
    ID              shift and go to state 15

    feature                        shift and go to state 18

state 13

    (7) features_list_opt -> empty .

    RBRACE          reduce using rule 7 (features_list_opt -> empty .)


state 14

    (9) features_list -> feature . SEMICOLON

    SEMICOLON       shift and go to state 19


state 15

    (10) feature -> ID . LPAREN formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> ID . LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
    (12) feature -> ID . COLON TYPE ASSIGN expression
    (13) feature -> ID . COLON TYPE

    LPAREN          shift and go to state 20
    COLON           shift and go to state 21


state 16

    (5) class -> CLASS TYPE INHERITS TYPE . LBRACE features_list_opt RBRACE

    LBRACE          shift and go to state 22


state 17

    (4) class -> CLASS TYPE LBRACE features_list_opt RBRACE .

    SEMICOLON       reduce using rule 4 (class -> CLASS TYPE LBRACE features_list_opt RBRACE .)


state 18

    (8) features_list -> features_list feature . SEMICOLON

    SEMICOLON       shift and go to state 23


state 19

    (9) features_list -> feature SEMICOLON .

    ID              reduce using rule 9 (features_list -> feature SEMICOLON .)
    RBRACE          reduce using rule 9 (features_list -> feature SEMICOLON .)


state 20

    (10) feature -> ID LPAREN . formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> ID LPAREN . RPAREN COLON TYPE LBRACE expression RBRACE
    (14) formal_params_list -> . formal_params_list COMMA formal_param
    (15) formal_params_list -> . formal_param
    (16) formal_param -> . ID COLON TYPE

    RPAREN          shift and go to state 26
    ID              shift and go to state 24

    formal_params_list             shift and go to state 25
    formal_param                   shift and go to state 27

state 21

    (12) feature -> ID COLON . TYPE ASSIGN expression
    (13) feature -> ID COLON . TYPE

    TYPE            shift and go to state 28


state 22

    (5) class -> CLASS TYPE INHERITS TYPE LBRACE . features_list_opt RBRACE
    (6) features_list_opt -> . features_list
    (7) features_list_opt -> . empty
    (8) features_list -> . features_list feature SEMICOLON
    (9) features_list -> . feature SEMICOLON
    (57) empty -> .
    (10) feature -> . ID LPAREN formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> . ID LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
    (12) feature -> . ID COLON TYPE ASSIGN expression
    (13) feature -> . ID COLON TYPE

    RBRACE          reduce using rule 57 (empty -> .)
    ID              shift and go to state 15

    features_list_opt              shift and go to state 29
    features_list                  shift and go to state 12
    empty                          shift and go to state 13
    feature                        shift and go to state 14

state 23

    (8) features_list -> features_list feature SEMICOLON .

    ID              reduce using rule 8 (features_list -> features_list feature SEMICOLON .)
    RBRACE          reduce using rule 8 (features_list -> features_list feature SEMICOLON .)


state 24

    (16) formal_param -> ID . COLON TYPE

    COLON           shift and go to state 30


state 25

    (10) feature -> ID LPAREN formal_params_list . RPAREN COLON TYPE LBRACE expression RBRACE
    (14) formal_params_list -> formal_params_list . COMMA formal_param

    RPAREN          shift and go to state 31
    COMMA           shift and go to state 32


state 26

    (11) feature -> ID LPAREN RPAREN . COLON TYPE LBRACE expression RBRACE

    COLON           shift and go to state 33


state 27

    (15) formal_params_list -> formal_param .

    RPAREN          reduce using rule 15 (formal_params_list -> formal_param .)
    COMMA           reduce using rule 15 (formal_params_list -> formal_param .)


state 28

    (12) feature -> ID COLON TYPE . ASSIGN expression
    (13) feature -> ID COLON TYPE .

    ASSIGN          shift and go to state 34
    SEMICOLON       reduce using rule 13 (feature -> ID COLON TYPE .)


state 29

    (5) class -> CLASS TYPE INHERITS TYPE LBRACE features_list_opt . RBRACE

    RBRACE          shift and go to state 35


state 30

    (16) formal_param -> ID COLON . TYPE

    TYPE            shift and go to state 36


state 31

    (10) feature -> ID LPAREN formal_params_list RPAREN . COLON TYPE LBRACE expression RBRACE

    COLON           shift and go to state 37


state 32

    (14) formal_params_list -> formal_params_list COMMA . formal_param
    (16) formal_param -> . ID COLON TYPE

    ID              shift and go to state 24

    formal_param                   shift and go to state 38

state 33

    (11) feature -> ID LPAREN RPAREN COLON . TYPE LBRACE expression RBRACE

    TYPE            shift and go to state 39


state 34

    (12) feature -> ID COLON TYPE ASSIGN . expression
    (17) expression -> . ID
    (18) expression -> . INTEGER
    (19) expression -> . BOOLEAN
    (20) expression -> . STRING
    (21) expression -> . SELF
    (22) expression -> . LBRACE block_list RBRACE
    (25) expression -> . ID ASSIGN expression
    (26) expression -> . expression DOT ID LPAREN arguments_list_opt RPAREN
    (31) expression -> . expression AT TYPE DOT ID LPAREN arguments_list_opt RPAREN
    (32) expression -> . ID LPAREN arguments_list_opt RPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression LTEQ expression
    (39) expression -> . expression EQ expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . IF expression THEN expression ELSE expression FI
    (42) expression -> . WHILE expression LOOP expression POOL
    (43) expression -> . let_expression
    (49) expression -> . CASE expression OF actions_list ESAC
    (53) expression -> . NEW TYPE
    (54) expression -> . ISVOID expression
    (55) expression -> . INT_COMP expression
    (56) expression -> . NOT expression
    (44) let_expression -> . LET declaration_list IN expression

    ID              shift and go to state 40
    INTEGER         shift and go to state 42
    BOOLEAN         shift and go to state 43
    STRING          shift and go to state 44
    SELF            shift and go to state 45
    LBRACE          shift and go to state 46
    LPAREN          shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    CASE            shift and go to state 51
    NEW             shift and go to state 52
    ISVOID          shift and go to state 53
    INT_COMP        shift and go to state 54
    NOT             shift and go to state 55
    LET             shift and go to state 56

    expression                     shift and go to state 41
    let_expression                 shift and go to state 50

state 35

    (5) class -> CLASS TYPE INHERITS TYPE LBRACE features_list_opt RBRACE .

    SEMICOLON       reduce using rule 5 (class -> CLASS TYPE INHERITS TYPE LBRACE features_list_opt RBRACE .)


state 36

    (16) formal_param -> ID COLON TYPE .

    RPAREN          reduce using rule 16 (formal_param -> ID COLON TYPE .)
    COMMA           reduce using rule 16 (formal_param -> ID COLON TYPE .)


state 37

    (10) feature -> ID LPAREN formal_params_list RPAREN COLON . TYPE LBRACE expression RBRACE

    TYPE            shift and go to state 57


state 38

    (14) formal_params_list -> formal_params_list COMMA formal_param .

    RPAREN          reduce using rule 14 (formal_params_list -> formal_params_list COMMA formal_param .)
    COMMA           reduce using rule 14 (formal_params_list -> formal_params_list COMMA formal_param .)


state 39

    (11) feature -> ID LPAREN RPAREN COLON TYPE . LBRACE expression RBRACE

    LBRACE          shift and go to state 58


state 40

    (17) expression -> ID .
    (25) expression -> ID . ASSIGN expression
    (32) expression -> ID . LPAREN arguments_list_opt RPAREN

    DOT             reduce using rule 17 (expression -> ID .)
    AT              reduce using rule 17 (expression -> ID .)
    PLUS            reduce using rule 17 (expression -> ID .)
    MINUS           reduce using rule 17 (expression -> ID .)
    MULTIPLY        reduce using rule 17 (expression -> ID .)
    DIVIDE          reduce using rule 17 (expression -> ID .)
    LT              reduce using rule 17 (expression -> ID .)
    LTEQ            reduce using rule 17 (expression -> ID .)
    EQ              reduce using rule 17 (expression -> ID .)
    SEMICOLON       reduce using rule 17 (expression -> ID .)
    RPAREN          reduce using rule 17 (expression -> ID .)
    THEN            reduce using rule 17 (expression -> ID .)
    LOOP            reduce using rule 17 (expression -> ID .)
    OF              reduce using rule 17 (expression -> ID .)
    RBRACE          reduce using rule 17 (expression -> ID .)
    COMMA           reduce using rule 17 (expression -> ID .)
    ELSE            reduce using rule 17 (expression -> ID .)
    POOL            reduce using rule 17 (expression -> ID .)
    FI              reduce using rule 17 (expression -> ID .)
    IN              reduce using rule 17 (expression -> ID .)
    ASSIGN          shift and go to state 59
    LPAREN          shift and go to state 60


state 41

    (12) feature -> ID COLON TYPE ASSIGN expression .
    (26) expression -> expression . DOT ID LPAREN arguments_list_opt RPAREN
    (31) expression -> expression . AT TYPE DOT ID LPAREN arguments_list_opt RPAREN
    (33) expression -> expression . PLUS expression
    (34) expression -> expression . MINUS expression
    (35) expression -> expression . MULTIPLY expression
    (36) expression -> expression . DIVIDE expression
    (37) expression -> expression . LT expression
    (38) expression -> expression . LTEQ expression
    (39) expression -> expression . EQ expression

    SEMICOLON       reduce using rule 12 (feature -> ID COLON TYPE ASSIGN expression .)
    DOT             shift and go to state 61
    AT              shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    MULTIPLY        shift and go to state 65
    DIVIDE          shift and go to state 66
    LT              shift and go to state 67
    LTEQ            shift and go to state 68
    EQ              shift and go to state 69


state 42

    (18) expression -> INTEGER .

    DOT             reduce using rule 18 (expression -> INTEGER .)
    AT              reduce using rule 18 (expression -> INTEGER .)
    PLUS            reduce using rule 18 (expression -> INTEGER .)
    MINUS           reduce using rule 18 (expression -> INTEGER .)
    MULTIPLY        reduce using rule 18 (expression -> INTEGER .)
    DIVIDE          reduce using rule 18 (expression -> INTEGER .)
    LT              reduce using rule 18 (expression -> INTEGER .)
    LTEQ            reduce using rule 18 (expression -> INTEGER .)
    EQ              reduce using rule 18 (expression -> INTEGER .)
    SEMICOLON       reduce using rule 18 (expression -> INTEGER .)
    RPAREN          reduce using rule 18 (expression -> INTEGER .)
    THEN            reduce using rule 18 (expression -> INTEGER .)
    LOOP            reduce using rule 18 (expression -> INTEGER .)
    OF              reduce using rule 18 (expression -> INTEGER .)
    RBRACE          reduce using rule 18 (expression -> INTEGER .)
    COMMA           reduce using rule 18 (expression -> INTEGER .)
    ELSE            reduce using rule 18 (expression -> INTEGER .)
    POOL            reduce using rule 18 (expression -> INTEGER .)
    FI              reduce using rule 18 (expression -> INTEGER .)
    IN              reduce using rule 18 (expression -> INTEGER .)


state 43

    (19) expression -> BOOLEAN .

    DOT             reduce using rule 19 (expression -> BOOLEAN .)
    AT              reduce using rule 19 (expression -> BOOLEAN .)
    PLUS            reduce using rule 19 (expression -> BOOLEAN .)
    MINUS           reduce using rule 19 (expression -> BOOLEAN .)
    MULTIPLY        reduce using rule 19 (expression -> BOOLEAN .)
    DIVIDE          reduce using rule 19 (expression -> BOOLEAN .)
    LT              reduce using rule 19 (expression -> BOOLEAN .)
    LTEQ            reduce using rule 19 (expression -> BOOLEAN .)
    EQ              reduce using rule 19 (expression -> BOOLEAN .)
    SEMICOLON       reduce using rule 19 (expression -> BOOLEAN .)
    RPAREN          reduce using rule 19 (expression -> BOOLEAN .)
    THEN            reduce using rule 19 (expression -> BOOLEAN .)
    LOOP            reduce using rule 19 (expression -> BOOLEAN .)
    OF              reduce using rule 19 (expression -> BOOLEAN .)
    RBRACE          reduce using rule 19 (expression -> BOOLEAN .)
    COMMA           reduce using rule 19 (expression -> BOOLEAN .)
    ELSE            reduce using rule 19 (expression -> BOOLEAN .)
    POOL            reduce using rule 19 (expression -> BOOLEAN .)
    FI              reduce using rule 19 (expression -> BOOLEAN .)
    IN              reduce using rule 19 (expression -> BOOLEAN .)


state 44

    (20) expression -> STRING .

    DOT             reduce using rule 20 (expression -> STRING .)
    AT              reduce using rule 20 (expression -> STRING .)
    PLUS            reduce using rule 20 (expression -> STRING .)
    MINUS           reduce using rule 20 (expression -> STRING .)
    MULTIPLY        reduce using rule 20 (expression -> STRING .)
    DIVIDE          reduce using rule 20 (expression -> STRING .)
    LT              reduce using rule 20 (expression -> STRING .)
    LTEQ            reduce using rule 20 (expression -> STRING .)
    EQ              reduce using rule 20 (expression -> STRING .)
    SEMICOLON       reduce using rule 20 (expression -> STRING .)
    RPAREN          reduce using rule 20 (expression -> STRING .)
    THEN            reduce using rule 20 (expression -> STRING .)
    LOOP            reduce using rule 20 (expression -> STRING .)
    OF              reduce using rule 20 (expression -> STRING .)
    RBRACE          reduce using rule 20 (expression -> STRING .)
    COMMA           reduce using rule 20 (expression -> STRING .)
    ELSE            reduce using rule 20 (expression -> STRING .)
    POOL            reduce using rule 20 (expression -> STRING .)
    FI              reduce using rule 20 (expression -> STRING .)
    IN              reduce using rule 20 (expression -> STRING .)


state 45

    (21) expression -> SELF .

    DOT             reduce using rule 21 (expression -> SELF .)
    AT              reduce using rule 21 (expression -> SELF .)
    PLUS            reduce using rule 21 (expression -> SELF .)
    MINUS           reduce using rule 21 (expression -> SELF .)
    MULTIPLY        reduce using rule 21 (expression -> SELF .)
    DIVIDE          reduce using rule 21 (expression -> SELF .)
    LT              reduce using rule 21 (expression -> SELF .)
    LTEQ            reduce using rule 21 (expression -> SELF .)
    EQ              reduce using rule 21 (expression -> SELF .)
    SEMICOLON       reduce using rule 21 (expression -> SELF .)
    RPAREN          reduce using rule 21 (expression -> SELF .)
    THEN            reduce using rule 21 (expression -> SELF .)
    LOOP            reduce using rule 21 (expression -> SELF .)
    OF              reduce using rule 21 (expression -> SELF .)
    RBRACE          reduce using rule 21 (expression -> SELF .)
    COMMA           reduce using rule 21 (expression -> SELF .)
    ELSE            reduce using rule 21 (expression -> SELF .)
    POOL            reduce using rule 21 (expression -> SELF .)
    FI              reduce using rule 21 (expression -> SELF .)
    IN              reduce using rule 21 (expression -> SELF .)


state 46

    (22) expression -> LBRACE . block_list RBRACE
    (23) block_list -> . block_list expression SEMICOLON
    (24) block_list -> . expression SEMICOLON
    (17) expression -> . ID
    (18) expression -> . INTEGER
    (19) expression -> . BOOLEAN
    (20) expression -> . STRING
    (21) expression -> . SELF
    (22) expression -> . LBRACE block_list RBRACE
    (25) expression -> . ID ASSIGN expression
    (26) expression -> . expression DOT ID LPAREN arguments_list_opt RPAREN
    (31) expression -> . expression AT TYPE DOT ID LPAREN arguments_list_opt RPAREN
    (32) expression -> . ID LPAREN arguments_list_opt RPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression LTEQ expression
    (39) expression -> . expression EQ expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . IF expression THEN expression ELSE expression FI
    (42) expression -> . WHILE expression LOOP expression POOL
    (43) expression -> . let_expression
    (49) expression -> . CASE expression OF actions_list ESAC
    (53) expression -> . NEW TYPE
    (54) expression -> . ISVOID expression
    (55) expression -> . INT_COMP expression
    (56) expression -> . NOT expression
    (44) let_expression -> . LET declaration_list IN expression

    ID              shift and go to state 40
    INTEGER         shift and go to state 42
    BOOLEAN         shift and go to state 43
    STRING          shift and go to state 44
    SELF            shift and go to state 45
    LBRACE          shift and go to state 46
    LPAREN          shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    CASE            shift and go to state 51
    NEW             shift and go to state 52
    ISVOID          shift and go to state 53
    INT_COMP        shift and go to state 54
    NOT             shift and go to state 55
    LET             shift and go to state 56

    block_list                     shift and go to state 70
    expression                     shift and go to state 71
    let_expression                 shift and go to state 50

state 47

    (40) expression -> LPAREN . expression RPAREN
    (17) expression -> . ID
    (18) expression -> . INTEGER
    (19) expression -> . BOOLEAN
    (20) expression -> . STRING
    (21) expression -> . SELF
    (22) expression -> . LBRACE block_list RBRACE
    (25) expression -> . ID ASSIGN expression
    (26) expression -> . expression DOT ID LPAREN arguments_list_opt RPAREN
    (31) expression -> . expression AT TYPE DOT ID LPAREN arguments_list_opt RPAREN
    (32) expression -> . ID LPAREN arguments_list_opt RPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression LTEQ expression
    (39) expression -> . expression EQ expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . IF expression THEN expression ELSE expression FI
    (42) expression -> . WHILE expression LOOP expression POOL
    (43) expression -> . let_expression
    (49) expression -> . CASE expression OF actions_list ESAC
    (53) expression -> . NEW TYPE
    (54) expression -> . ISVOID expression
    (55) expression -> . INT_COMP expression
    (56) expression -> . NOT expression
    (44) let_expression -> . LET declaration_list IN expression

    ID              shift and go to state 40
    INTEGER         shift and go to state 42
    BOOLEAN         shift and go to state 43
    STRING          shift and go to state 44
    SELF            shift and go to state 45
    LBRACE          shift and go to state 46
    LPAREN          shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    CASE            shift and go to state 51
    NEW             shift and go to state 52
    ISVOID          shift and go to state 53
    INT_COMP        shift and go to state 54
    NOT             shift and go to state 55
    LET             shift and go to state 56

    expression                     shift and go to state 72
    let_expression                 shift and go to state 50

state 48

    (41) expression -> IF . expression THEN expression ELSE expression FI
    (17) expression -> . ID
    (18) expression -> . INTEGER
    (19) expression -> . BOOLEAN
    (20) expression -> . STRING
    (21) expression -> . SELF
    (22) expression -> . LBRACE block_list RBRACE
    (25) expression -> . ID ASSIGN expression
    (26) expression -> . expression DOT ID LPAREN arguments_list_opt RPAREN
    (31) expression -> . expression AT TYPE DOT ID LPAREN arguments_list_opt RPAREN
    (32) expression -> . ID LPAREN arguments_list_opt RPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression LTEQ expression
    (39) expression -> . expression EQ expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . IF expression THEN expression ELSE expression FI
    (42) expression -> . WHILE expression LOOP expression POOL
    (43) expression -> . let_expression
    (49) expression -> . CASE expression OF actions_list ESAC
    (53) expression -> . NEW TYPE
    (54) expression -> . ISVOID expression
    (55) expression -> . INT_COMP expression
    (56) expression -> . NOT expression
    (44) let_expression -> . LET declaration_list IN expression

    ID              shift and go to state 40
    INTEGER         shift and go to state 42
    BOOLEAN         shift and go to state 43
    STRING          shift and go to state 44
    SELF            shift and go to state 45
    LBRACE          shift and go to state 46
    LPAREN          shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    CASE            shift and go to state 51
    NEW             shift and go to state 52
    ISVOID          shift and go to state 53
    INT_COMP        shift and go to state 54
    NOT             shift and go to state 55
    LET             shift and go to state 56

    expression                     shift and go to state 73
    let_expression                 shift and go to state 50

state 49

    (42) expression -> WHILE . expression LOOP expression POOL
    (17) expression -> . ID
    (18) expression -> . INTEGER
    (19) expression -> . BOOLEAN
    (20) expression -> . STRING
    (21) expression -> . SELF
    (22) expression -> . LBRACE block_list RBRACE
    (25) expression -> . ID ASSIGN expression
    (26) expression -> . expression DOT ID LPAREN arguments_list_opt RPAREN
    (31) expression -> . expression AT TYPE DOT ID LPAREN arguments_list_opt RPAREN
    (32) expression -> . ID LPAREN arguments_list_opt RPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression LTEQ expression
    (39) expression -> . expression EQ expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . IF expression THEN expression ELSE expression FI
    (42) expression -> . WHILE expression LOOP expression POOL
    (43) expression -> . let_expression
    (49) expression -> . CASE expression OF actions_list ESAC
    (53) expression -> . NEW TYPE
    (54) expression -> . ISVOID expression
    (55) expression -> . INT_COMP expression
    (56) expression -> . NOT expression
    (44) let_expression -> . LET declaration_list IN expression

    ID              shift and go to state 40
    INTEGER         shift and go to state 42
    BOOLEAN         shift and go to state 43
    STRING          shift and go to state 44
    SELF            shift and go to state 45
    LBRACE          shift and go to state 46
    LPAREN          shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    CASE            shift and go to state 51
    NEW             shift and go to state 52
    ISVOID          shift and go to state 53
    INT_COMP        shift and go to state 54
    NOT             shift and go to state 55
    LET             shift and go to state 56

    expression                     shift and go to state 74
    let_expression                 shift and go to state 50

state 50

    (43) expression -> let_expression .

    DOT             reduce using rule 43 (expression -> let_expression .)
    AT              reduce using rule 43 (expression -> let_expression .)
    PLUS            reduce using rule 43 (expression -> let_expression .)
    MINUS           reduce using rule 43 (expression -> let_expression .)
    MULTIPLY        reduce using rule 43 (expression -> let_expression .)
    DIVIDE          reduce using rule 43 (expression -> let_expression .)
    LT              reduce using rule 43 (expression -> let_expression .)
    LTEQ            reduce using rule 43 (expression -> let_expression .)
    EQ              reduce using rule 43 (expression -> let_expression .)
    SEMICOLON       reduce using rule 43 (expression -> let_expression .)
    RPAREN          reduce using rule 43 (expression -> let_expression .)
    THEN            reduce using rule 43 (expression -> let_expression .)
    LOOP            reduce using rule 43 (expression -> let_expression .)
    OF              reduce using rule 43 (expression -> let_expression .)
    RBRACE          reduce using rule 43 (expression -> let_expression .)
    COMMA           reduce using rule 43 (expression -> let_expression .)
    ELSE            reduce using rule 43 (expression -> let_expression .)
    POOL            reduce using rule 43 (expression -> let_expression .)
    FI              reduce using rule 43 (expression -> let_expression .)
    IN              reduce using rule 43 (expression -> let_expression .)


state 51

    (49) expression -> CASE . expression OF actions_list ESAC
    (17) expression -> . ID
    (18) expression -> . INTEGER
    (19) expression -> . BOOLEAN
    (20) expression -> . STRING
    (21) expression -> . SELF
    (22) expression -> . LBRACE block_list RBRACE
    (25) expression -> . ID ASSIGN expression
    (26) expression -> . expression DOT ID LPAREN arguments_list_opt RPAREN
    (31) expression -> . expression AT TYPE DOT ID LPAREN arguments_list_opt RPAREN
    (32) expression -> . ID LPAREN arguments_list_opt RPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression LTEQ expression
    (39) expression -> . expression EQ expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . IF expression THEN expression ELSE expression FI
    (42) expression -> . WHILE expression LOOP expression POOL
    (43) expression -> . let_expression
    (49) expression -> . CASE expression OF actions_list ESAC
    (53) expression -> . NEW TYPE
    (54) expression -> . ISVOID expression
    (55) expression -> . INT_COMP expression
    (56) expression -> . NOT expression
    (44) let_expression -> . LET declaration_list IN expression
